# Lerobot-convert-teleai

./: .gitignore  AGENTS.md  INSTALL.md  README.md  apply-update.sh  install-systemd-service.sh  package-lock.json  package.json  push-with-pat.sh  pyproject.toml  run.py  start.sh
lerobot_dataconvert/: __init__.py  adapters.py  conversion.py  manager.py  models.py  motion.py  server.py  updates.py
lerobot_dataconvert/static/: app.css  app.js  index.html  manifest.webmanifest  sw.js
skills/maintain-lerobot-converter/: SKILL.md
skills/maintain-lerobot-converter/agents/: openai.yaml
skills/maintain-lerobot-converter/references/: architecture.md  dataset-contracts.md  operations-and-ui.md
tests/: test_core.py  test_multiprocessing_pool_adapter.py  test_recovery.py  test_updates.py  test_zhijun_vla_planner_hdf5_adapter.py  ui_check.mjs
