[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-dataconvert"
version = "0.1.0"
description = "Local resumable, multi-process LeRobot dataset conversion workbench"
requires-python = ">=3.10"
dependencies = [
  "av>=12",
  "h5py>=3.8",
  "lerobot==0.3.3",
  "numpy>=1.24",
  "opencv-python>=4.9",
  "pandas>=2.0",
  "psutil>=5.9",
  "pyarrow>=14"
]

[project.scripts]
lerobot-dataconvert = "lerobot_dataconvert.server:main"

[tool.setuptools.package-data]
lerobot_dataconvert = ["static/**/*"]

[tool.setuptools.packages.find]
include = ["lerobot_dataconvert*"]
exclude = ["node_modules*", "tests*"]
